--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" href="/favicon.ico"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <!-- <title>Vite App</title> -->
-    <title>vue3-Start-Fix-V1</title>
+    <title>Vue3-Start-V2</title>
   </head>
   <body>
     <div id="app"></div>
